--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,9 @@
-version: "2"
+version: 2
 
 build:
   os: "ubuntu-22.04"
   tools:
-    python: "3.10"
+    python: "3.8"
 
 python:
   install:
@@ -11,3 +11,4 @@ python:
 
 sphinx:
   configuration: docs/source/conf.py
+  fail_on_warning: true
